# emscripten_test

./: .devcontainer.json  .gitattributes  .gitignore  CMakeLists.txt  README.md  library.cpp  library.h
data/: pose_classifier_yolo-0.1.0.onnx  test_inference.cc  yolov8nms-pose.onnx
docker/: builder.dockerfile
include/: inference.hpp  inference_mediapipe.hpp  inference_session.hpp  inference_yolo.hpp  library.hpp
include/base/: inference.hpp  inference_session.hpp
include/helper/: tensor.hpp  tensor_utils.hpp
include/type/: image_size.hpp
source/: inference.cpp  inference_mediapipe.cpp  inference_session.cpp  inference_yolo.cpp  library.cpp
source/base/: inference_session.cpp
source/helper/: tensor.cpp
source/type/: image_size.cpp
test/: CMakeLists.txt  test_inference.cc
